# haskell-club

homework/homework1/: package.yaml
homework/homework1/app/: Main.hs
homework/homework1/src/: Hanoi.hs  Lib.hs
homework/homework2/: package.yaml
homework/homework2/app/: Main.hs
homework/homework2/src/: LogAnalysis.hs
homework/homework3/: package.yaml
homework/homework3/src/: Golf.hs
homework/homework3/test/: Spec.hs
homework/homework4/: package.yaml
homework/homework4/src/: Lib.hs
homework/homework4/test/: Spec.hs
homework/homework5/: package.yaml
homework/homework5/app/: Main.hs
homework/homework5/src/: BoolExprT.hs  Calc.hs  Lib.hs  VarExprT.hs
homework/homework5/test/: Driver.hs  SpecExpr.hs
homework/homework6/: CHANGELOG.md  homework6.cabal
homework/homework6/app/: Main.hs
homework/homework7/: CHANGELOG.md  homework7.cabal
homework/homework7/app/: Main.hs  ScoreEditor.hs
homework/homework7/src/: JoinList.hs  Scrabble.hs  Sized.hs  StringBufEditor.hs
homework/homework8/: CHANGELOG.md  homework8.cabal
homework/homework8/app/: Main.hs  Party.hs
