cabal-version:      2.4
name:               homework7
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jean-Paul Calderone
maintainer:         exarkun@twistedmatrix.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable demo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0
                 , homework7
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -Wall

executable score-editor
    main-is:          ScoreEditor.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0
                 , homework7
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -Wall

library
  exposed-modules:
      JoinList
    , Sized
    , Scrabble
    , Buffer
    , Editor
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , mtl
  default-language: Haskell2010
  ghc-options:
      -Wall
